Need `--add-exports` for javac.parser (#7242)